--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "^7.2.1",
     "@angular/core": "^7.2.1",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -25,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
